@startuml

!theme monokai from ..\.styles

hide class empty members

class Proteus {
    +move()
    +eat()
    +reproduce()
}
class Fish {
    +breath()
}
class Reptile {
    +hide()
}
class Bird {
    +fly()
}
class Mammal {
    +care()
}
class Human {
    +speak()
}

Proteus <|-- Fish
Fish <|-- Reptile
Reptile <|-- Bird
Reptile <|-- Mammal
Mammal <|-- Human

@enduml